@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.4-2
-Date: 2025-03-20
+Version: 3.4-2.001
+Date: 2025-04-05
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
