@@ -13,4 +13,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2024-08-20" "3.3-2" 230 517 0 31571 6364
 "2024-10-22" "3.3-3" 235 525 0 31903 6364
 "2025-03-20" "3.4-0" 240 534 0 33260 6364
-"2025-03-20" "3.4-2" 240 534 0 33262 6364
+"2025-04-05" "3.4-2.001" 240 534 0 33286 6364
